PESEL verification app

--- a/app_home/templates/home.html
+++ b/app_home/templates/home.html
@@ -13,7 +13,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Text Processing</h5>
                         <p class="card-text">Go to text processing exercise.</p>
-                        <a href="/text/textprocessing" class="btn btn-secondary">Go</a>
+                        <a href="/text/processing" class="btn btn-secondary">Go</a>
                     </div>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Pesel Verification</h5>
                         <p class="card-text">Go to PESEL Verification</p>
-                        <a href="#" class="btn btn-secondary">Go</a>
+                        <a href="/PESEL/verification" class="btn btn-secondary">Go</a>
                     </div>
                 </div>
             </div>
