--- a/app_home/templates/home.html
+++ b/app_home/templates/home.html
@@ -5,11 +5,11 @@
 {% block links %}{% endblock %}
 
 {% block body %}
-    <div class="container text-center" style="margin-top: 10px;"></div>
-    <div class="container text-center" style="margin-top: 10px;">
+    <div class="container text-center wxx-margin"></div>
+    <div class="container text-center wxx-margin">
         <div class="row">
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card wxx-card">
                     <div class="card-body">
                         <h5 class="card-title">Text Processing</h5>
                         <p class="card-text">Go to text processing exercise.</p>
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card wxx-card">
                     <div class="card-body">
                         <h5 class="card-title">Pesel Verification</h5>
                         <p class="card-text">Go to PESEL Verification</p>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card wxx-card">
                     <div class="card-body">
                         <h5 class="card-title">Recursion</h5>
                         <p class="card-text">Go to recursion example</p>
