--- a/app_home/templates/base.html
+++ b/app_home/templates/base.html
@@ -1,19 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="{% static 'images/wxx.ico' %}" type="image/x-icon"/>
     <meta charset="UTF-8">
 
     <title>{% block title %}{% endblock %}</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/WXXstyles.css' %}">
     {% block links %}{% endblock %}
 </head>
 <body>
-    <header class="navbar" style="background-color: gray; color: white">
-        <div class="row flex-nowrap">
+    <header class="navbar wxx-navbar">
+        <div class="row flex-nowrap align-items-center">
             <div class="col-4"></div>
+            <div class="col-1 ">
+                <a href="{% url 'home' %}" class="logo-lg"><img alt="Logo" width="40" height="40" src="{% static 'images/wxx.png' %}" /></a>
+            </div>
             <div class="col col-auto">
-                <a href="/" style="color: white; text-decoration: none;">
+                <a href="/" class="wxx-navbarlink">
                     <h1>Wolski Examples&Exercises</h1>
                 </a>
             </div>
