--- a/app_textprocessing/templates/processingresult.html
+++ b/app_textprocessing/templates/processingresult.html
@@ -8,12 +8,12 @@
     <div class="container vh-80 d-flex align-items-top justify-content-center">
         <div class="card card-default shadow rounded border w-50 h-75 mx-auto text-center justify-content-center">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                <div class=" p-3 w-90 " style="border: 1px solid black; display: flex; justify-content: center; background-color: #eee; max-height: 50vh; overflow-y: auto; word-wrap: break-word;">
+                <div class=" p-3 w-90 wxx-paragraph" >
                     <p style="margin: 0;">
                         {{ result }}
                     </p>
                 </div>
-                <a href="/text/textprocessing" class="btn btn-secondary mt-3">Return</a>
+                <a href="/text/processing" class="btn btn-secondary mt-3">Return</a>
             </div>
         </div>
     </div>
